--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,5 @@
 version: "3.9"
 
-volumes:
-  mysql_data: 
-
 services:
   react-app:
     build: ./front
@@ -23,15 +20,25 @@ services:
       - WATCHFILES_FORCE_POLLING=true
 
   db:
-    image: mysql:8.0
     platform: linux/x86_64
-    environment:
-      MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
-      MYSQL_DATABASE: 'demo'
-      TZ: 'Asia/Tokyo'
+    image: mysql:8.0
     volumes:
-      - mysql_data:/var/lib/mysql
-    command: --default-authentication-plugin=mysql_native_password
+      - ./db/volume:/var/lib/mysql
+      - ./db/dump:/dump
+    environment:
+      MYSQL_ROOT_PASSWORD: password
+      MYSQL_DATABASE: demo
+      MYSQL_USER: admin
+      MYSQL_PASSWORD: password
+      TZ: 'Asia/Tokyo'
     ports:
-      - 33306:3306
+      - "3306:3306"
+
+  adminer:
+    image: adminer:4.8.0
+    ports:
+      - "8081:8080"
+    depends_on:
+      - db
+
 
