--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,7 @@ services:
       MYSQL_USER: admin
       MYSQL_PASSWORD: password
       TZ: 'Asia/Tokyo'
+    command: --default-authentication-plugin=mysql_native_password
     ports:
       - "3306:3306"
 
