--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,7 @@ services:
     platform: linux/x86_64
     image: mysql:8.0
     volumes:
+      - ./my.cnf:/etc/mysql/conf.d/my.cnf
       - ./db/volume:/var/lib/mysql
       - ./db/dump:/dump
     environment:
