--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
     platform: linux/x86_64
     image: mysql:8.0
     volumes:
-      - ./my.cnf:/etc/mysql/conf.d/my.cnf
+      - ./db/my.cnf:/etc/mysql/conf.d/my.cnf
       - ./db/volume:/var/lib/mysql
       - ./db/dump:/dump
     environment:
@@ -32,7 +32,6 @@ services:
       MYSQL_USER: admin
       MYSQL_PASSWORD: password
       TZ: 'Asia/Tokyo'
-    command: --default-authentication-plugin=mysql_native_password
     ports:
       - "33306:3306"
 
