--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
     volumes:
       - ./front:/app
       - react_volume:/app/node_modules
+    restart: always
 
   fastapi-app:
     build: ./back
@@ -21,6 +22,7 @@ services:
       - 8000:8000
     environment:
       - WATCHFILES_FORCE_POLLING=true
+    restart: always
 
   db:
     platform: linux/x86_64
@@ -37,6 +39,7 @@ services:
       TZ: 'Asia/Tokyo'
     ports:
       - "33306:3306"
+    restart: always
 
   adminer:
     image: adminer:4.8.0
@@ -44,5 +47,6 @@ services:
       - "8081:8080"
     depends_on:
       - db
+    restart: always
 
 
